--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,8 @@
-absl-py==2.1.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
-attrs==24.3.0
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.0
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
-comtypes==1.4.8
-contourpy==1.3.0
-cv==1.0.0
-cycler==0.12.1
-debugpy @ file:///D:/bld/debugpy_1734158945806/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1733236420667/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
-flatbuffers==24.12.23
-fonttools==4.55.3
-idna==3.10
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1733223117029/work
-importlib_resources==6.4.5
-ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
-ipython @ file:///D:/bld/ipython_1701831845989/work
-jax==0.4.30
-jaxlib==0.4.30
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///D:/bld/jupyter_core_1727163532151/work
-kiwisolver==1.4.7
-matplotlib==3.9.4
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
-mediapipe==0.10.20
-ml_dtypes==0.5.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
-numpy==1.26.4
-opencv-contrib-python==4.10.0.84
-opt_einsum==3.4.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
-pillow==11.0.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1733302527033/work
-protobuf==4.25.5
-psutil @ file:///D:/bld/psutil_1729847171148/work
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
-pycaw==20240210
-pycparser==2.22
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1733221634316/work
-pyparsing==3.2.0
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
-pywin32==307
-pyzmq @ file:///D:/bld/pyzmq_1728642354337/work
-requests==2.32.3
-scipy==1.13.1
-sentencepiece==0.2.0
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
-sounddevice==0.5.1
-stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
-tornado @ file:///D:/bld/tornado_1732615926917/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1733188668063/work
-urllib3==2.3.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+cv2
+mediapipe
+time
+numpy
+math
+ctypes
+comtypes
+pycaw
